# pct-file-validator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: ci.yml  publish-apt-repo.yml  release-deb.yml  release-windows.yml
assets/icons/: master.base64
cli/: __init__.py  main.py
configs/: default.yaml
core/: __init__.py  config.py  fs_ops.py  models.py  normalizer.py  reporting.py  sanitizer.py  smart_namer.py  validators.py  version.py
debian/: changelog  control
docs/: BUILD.md  RELEASE.md  TROUBLESHOOTING.md
gui/: __init__.py  app.py  main_window.py
packaging/: build_deb.sh  gdlex-pct-validator.desktop  generate_icons.py  pct-file-validator.desktop
packaging/man/: gdlex-gui.1
packaging/usr-bin/: gdlex-gui
packaging/windows/: app.manifest  build.ps1  installer.iss
tests/: test_analysis_ignore_technical.py  test_cli.py  test_collision.py  test_config_fallback.py  test_drop_paths.py  test_generate_icons.py  test_gui_smoke.py  test_manifest.py  test_normalizer.py  test_output_dir_defaults.py  test_reporting.py  test_sanitize_all.py  test_sanitize_collision_output.py  test_smart_namer.py  test_version_and_about.py  test_zip_flatten.py
tools/: generate_icons.py
