[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdlex-pct-validator"
version = "0.1.0"
description = "Validator e sanitizzatore conservativo per deposito telematico PCT/PDUA"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GD LEX" }]
dependencies = [
  "PySide6>=6.6",
]

[project.scripts]
gdlex-check = "cli.main:main"
gdlex-gui = "gui.app:main"

[tool.setuptools]
packages = ["core", "cli", "gui"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
