[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gdlex-pct-validator"
dynamic = ["version"]
description = "Validator e sanitizzatore conservativo per deposito telematico PCT/PDUA"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GD LEX" }]
dependencies = [
  "PySide6>=6.6",
]

[project.scripts]
gdlex-check = "cli.main:main"
gdlex-gui = "gui.app:main"

[tool.setuptools]
packages = ["core", "cli", "gui"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]


[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "UP017"]
